2012-09-23  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (read_insn, write_insn, read_compressed_insn):
	New functions.
	(install_insn, md_apply_fix, md_convert_frag, mips_handle_align):
	Use them, and write_compressed_insn.

2012-09-23  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (mips_cl_insn): Remove use_extend and extend.
	(MIPS16_EXTEND): New macro.
	(mips16_opcode_length): New function.
	(insn_length): Use it.
	(create_insn): Update after mips_cl_insn change.
	(write_compressed_insn): New function.
	(install_insn): Use it.
	(append_insn): Use insn_length to check for unextended MIPS16
	instructions.
	(mips16_macro_build): Update call to mips16_immed.
	(mips16_ip): Likewise.  Use MIPS16_EXTEND to force an extended
	instruction.
	(mips16_immed): Remove use_extend and extend; install EXTEND
	opcodes in the upper 16 bits of *INSN instead.  Keep the
	instruction extended if it already is.  Replace warn, small
	and ext with a forced_insn_length-like parameter.
	(md_convert_frag): Update call mips16_immed.
	Use write_compressed_insn.

2012-09-20  Michael Zolotukhin  <michael.v.zolotukhin@intel.com>

	* config/tc-i386.c (cpu_arch): Add .cx16.
	* doc/c-i386.texi: Document .cx16.

2012-09-19  Steve Ellcey  <sellcey@mips.com>

	* configure.tgt: Add mips*-mti-elf* target.

2012-09-18  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/tc-arm.c: Changed ldra and strl-form mnemonics
	to lda and stl-form for armv8.

2012-09-17  Yufeng Zhang  <yufeng.zhang@arm.com>

	* config/tc-aarch64.c (aarch64_archs): Rename 'armv8' to 'armv8-a'.

2012-09-14  David Edelsohn  <dje.gcc@gmail.com>

	* configure: Regenerate.

2012-09-13  Anthony Green  <green@moxielogic.com>

	* config/tc-moxie.h (DEFAULT_TARGET_FORMAT): Define.
	(TARGET_FORMAT): Don't hard-code endian-ness.
	* config/tc-moxie.c (target_big_endian, moxie_target_format):
	Define.
	(md_assemble): Handle bi-endian encodings.